--- a/src/main/resources/archetype-resources/__rootArtifactId__-Server/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-Server/pom.xml
@@ -33,8 +33,8 @@
 
 		<dependency>
 			<groupId>me.mrletsplay</groupId>
-			<artifactId>FullstackWebFramework</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<artifactId>FullStackWebFramework</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	
